--- a/server/package.json
+++ b/server/package.json
@@ -6,7 +6,7 @@
   "type": "module",
   "scripts": {
     "start": "nodemon index.js",
-    "install": "npm install"
+    "build": "npm install"
   },
   "keywords": [],
   "author": "",
